<resources>
    <string name="app_name">LoginWithRetrofit</string>
    <string name="remember_me">remember_me</string>
    <string name="login">log_in</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="mobile_banking">mobile_banking</string>
    <string name="dialogTitle">please Enter Amount</string>
    <string name="dialogMessage"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_name">Display Name</string>
    <string name="account_balance">Account Balance</string>
    <string name="account_type">Account Type</string>
    <string name="index">Index</string>

    <!--    <string-array name="Languages">-->
    <!--        <item>Java</item>-->
    <!--        <item>Kotlin</item>-->
    <!--        <item>Swift</item>-->
    <!--        <item>Python</item>-->
    <!--        <item>Scala</item>-->
    <!--        <item>Perl</item>-->
    <!--    </string-array>-->
</resources>