<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".Login.LoginFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="327dp"
        android:layout_height="46dp"
        android:layout_marginTop="36dp"
        android:background="#0027B3"
        android:text="@string/mobile_banking"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_username"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:textColorHint="#0027B3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.127">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:textColor="#0027B3"
            tools:layout_editor_absoluteX="-1dp"
            tools:layout_editor_absoluteY="169dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_password"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:textColorHint="#0027B3"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/il_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textWebPassword"
            android:textColor="#0027B3" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:layout_width="39dp"
        android:layout_height="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/il_password" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="291dp"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:text="@string/remember_me"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/il_password" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="222dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#0027B3"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>